Fixed logo bug on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -26,7 +26,7 @@ body {
 }
 
 @media (max-width:650px) {
-  .logo {
+  .nav-logo {
     display: none;
   }
 }
